# SecEBL

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  rev20_tag_rfc.md  tags_schema_rev20.json
docs/: l1_data_benchmark_metrics_summary.md
examples/: README.md  manifest.json
examples/k8s/: example_gold.rev20.jsonl  example_sessions.jsonl
examples/linux/: example_gold.rev20.jsonl  example_sessions.jsonl
scripts/: run_examples.sh
secebl_l1/: __init__.py  eval_rev20_final_gold.py  predict_benchmark_tags.py  predict_tags.py  rev20_model_loading.py  rev20_prompt_profiles.py  session_scorer.py  v4_tags_embedding_retrieval.py
secebl_l2/: __init__.py  rev20_l2_features.py  rev20_l2_ml.py  session_scorer.py  stream_risk_common.py  tag_risk_policy.rev20.json  v4_tags_embedding_retrieval.py
